--- a/templates/index.html
+++ b/templates/index.html
@@ -165,31 +165,33 @@
 
 <script src="../static/js/loaded.js"></script>
 <script>
-    const now = new Date();
-    const sunriseTime = "{{ data.sunrise_time }}";
-    const sunsetTime = "{{ data.sunset_time }}";
-
-    // 设置指定的时间（8 点 20 分）
-    function setReloadDate(dateStr) {
-        let parts = dateStr.split(':');
-        let targetDate = new Date();
-        targetDate.setHours(parts[0]);
-        targetDate.setMinutes(parts[1]);
-        // 计算时间差（以毫秒为单位）
-        const timeDifference = targetDate - new Date();
-        console.log(new Date())
-        console.log("targetDate:"+targetDate)
-        if (timeDifference <= 0) {// 如果时间差为负数，表示已经过了指定时间，不必刷新
-            console.log("timeDifference:"+timeDifference)
-        } else {// 延迟指定时间后刷新网页
-            console.log("将在"+timeDifference/1000/60+"分钟后刷新网页")
-            setTimeout(() => {
-                location.reload();
-            }, timeDifference);
-        }
+const sunriseTime = "{{ data.sunrise_time }}";
+const sunsetTime = "{{ data.sunset_time }}";
+const nextReloadTime = currentHourArr[0] + ":00";
+// 设置指定的时间（8 点 20 分）
+function setReloadDate(dateStr) {
+    console.log(dateStr)
+    let parts = dateStr.split(':');
+    let targetDate = new Date();
+    console.log("nowDate:" + targetDate)
+    targetDate.setHours(parts[0]);
+    targetDate.setMinutes(parts[1]);
+    // 计算时间差（以毫秒为单位）
+    const timeDifference = targetDate - new Date();
+    console.log("targetDate:" + targetDate)
+    if (timeDifference >0) {// 延迟指定时间后刷新网页
+        console.log("将在" + timeDifference / 1000 / 60 + "分钟后刷新网页")
+        setTimeout(() => {
+            location.reload();
+        }, timeDifference);
+    } else {// 如果时间差为负数，表示已经过了指定时间，不必刷新
+        console.log("skipping,timeDifference:" + timeDifference)
     }
-    setReloadDate(sunriseTime);
-    setReloadDate(sunsetTime);
+}
+
+setReloadDate(sunriseTime);
+setReloadDate(sunsetTime);
+setReloadDate(nextReloadTime);
 
 
 
